k8s/gateway/manifests/public-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  annotations:
    cert-manager.io/issuer: selfsigned-issuer
spec:
  gatewayClassName: nginx
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: is-stag.cz
      tls:
        mode: Terminate
        certificateRefs:
          - name: selfsigned-cert-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Same
