k8s/gateway/manifests/prometheus-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
spec:
  parentRefs:
    - name: prometheus-gateway
      sectionName: https
      kind: Gateway
  hostnames:
    - prometheus.is-stag.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus
          port: 9090
